# Bunkeys

./: Cargo.toml  README.md
src/: app.rs  bip39.rs  encrypt.rs  fraction.rs  main.rs  polynom.rs  shamir_secret_sharing.rs  store.rs
src/app/: data.rs  state.rs  text_input.rs
src/app/state/: edit_store.rs  init_store.rs  load_store.rs  main_menu.rs  save_store.rs
