[package]
name = "Bunkeys"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"       # For modular arithmetic traits# For efficient modular operations
itertools = "0.14.0"
lazy_static = "1.5.0"
sha2 = "0.10"
aes-gcm = { version =  "0.10.3" }
aead = { version = "0.5.2" }
ratatui = "0.30.0"        # TUI framework
crossterm = "0.29.0"      # Terminal backend
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"    # JSON parsing
hex = "0.4.3"             # Hex string conversion
color-eyre = "0.6.5"
strum = "0.27.2"
strum_macros = "0.27.2"         # Error handling
enum_dispatch = "0.3.13"
